refactor: fix inspection warnings found by plugin agent
- Remove unused variables (rc, newText, manager, importSpec, etc.)
- Remove redundant @SuppressWarnings on pollQodanaResults
- Simplify conditional expression with short-circuit logic
- Inline unnecessary local variables (allLines, result, virtualFile)
- Use getFirst()/getLast() instead of get(0)/get(size()-1)
- Expand wildcard imports per project code style
- Restore writerLock fix (agent had reverted to synchronized(writer))
- Remove invalid @SuppressWarnings on if/try statements